# HPC_data_processing

./: .gitignore  CMakeLists.txt  Mini1_doc.docx  README.md  Readme.md  context.md  mini1-memory-nyc.md  report.md  test.ipynb
common/include/: StringPool.hpp  StringRegistry.hpp
common/src/: StringPool.cpp
phase1/: benchmark_results.txt  run_benchmark.sh
phase1/benchmark/: Benchmark.cpp
phase1/include/: DataStore.hpp
phase1/src/: DataStore.cpp
phase2/: CMakeLists.txt  benchmark_results.txt  run_benchmark.sh
phase2/benchmark/: Benchmark.cpp  Benchmark.hpp
phase2/include/: ParallelDataStore.hpp
phase2/src/: ParallelDataStore.cpp  main.cpp
src/: main.cpp
src/api/: NYC311Service.h
src/benchmark/: Benchmark.h
src/models/: ServiceRequest.h
src/parsers/: CSVParser.cpp  CSVParser.h
src/storage/: DataStore.h  Index.h  MMapFile.h  StringPool.h
